--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,32 @@
 {
-    "name": "Osman's Personal App",
-    "short_name": "FinanceApp",
-    "description": "Your personal finance tracker.",
-    "icons": [
-        {
-            "src": "/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
-    "start_url": "/",
-    "display": "standalone"
+  "theme_color": "#2064a8",
+  "background_color": "#dcf0ff",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
+  "name": "Osman's Personal App",
+  "short_name": "Finance App",
+  "description": "Your personal finance tracker.",
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
