--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,19 @@
 {
-  "theme_color": "#2064a8",
-  "background_color": "#dcf0ff",
-  "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
   "name": "Osman's Personal App",
-  "short_name": "Finance App",
+  "short_name": "FinanceApp",
   "description": "Your personal finance tracker.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#21315B",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512x512.png",
+      "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
