--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,16 @@
 {
   "name": "Osman's Personal Assistant",
-  "short_name": "Osman's Assistant",
-  "start_url": ".",
+  "short_name": "Osman's PA",
+  "description": "Your personal assistant for managing finances.",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#fff",
-  "description": "Your personal assistant.",
-  "theme_color": "#2196f3",
+  "background_color": "#ffffff",
+  "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ]
 }
